--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta http-equiv="Content-Security-Policy"/>
     <meta charset="utf-8" />
-    <title>TTS App  v65</title>
+    <title>TTS App</title>
 
     <link href="css/icons.css" rel="stylesheet" type="text/css" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
@@ -21,7 +21,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v92</div>
+            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v93</div>
             
 
             <div class="row nav-top">
@@ -282,7 +282,7 @@
                             <hr>
                             <button class="buttonStyle btn-tertiary" ng-click="openUserPanel()">Close</button>
 
-                             <button id="debugButton" class="buttonStyle btn-primary" onlyclick="submitDebug()">Submit Debug Report</button>
+                             <button id="debugButton" class="buttonStyle btn-primary" onclick="submitDebug()">Submit Debug Report</button>
 
                             <div  style="font-size:12px; display:block" id="debug">1 Debug</div>
 
