--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v94</div>
+            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v95</div>
             
 
             <div class="row nav-top">
@@ -284,12 +284,12 @@
 
                              <button id="debugButton" class="buttonStyle btn-primary" onclick="submitDebug()">Submit Debug Report</button>
 
-                            <div  style="font-size:12px; display:block" id="debug">1 Debug</div>
+                            <div  style="font-size:12px; display:block" id="debug">Debug</div>
 
                             <div  style="font-size:12px; display:block" id="fileURL">fileURL</div>
                             <div  style="font-size:12px; display:block" id="fileType">fileType</div>
                             <div  style="font-size:12px; display:block" id="fileName">fileName</div>
-                            <div  style="font-size:12px; display:block" id="platform">platform</div>
+                            <div  style="font-size:12px; display:none" id="platform">platform</div>
 
                         </div>
                     </div>
