--- a/www/index.html
+++ b/www/index.html
@@ -21,9 +21,6 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; position:fixed; bottom:0; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v96</div>
-            
-
             <div class="row nav-top">
                 <div class="grid three pull" ng-click="goBack()" ng-show="showBack">Back</div>    
                 <div class="grid three push" ng-click="logOut()">Logout</div>
@@ -282,13 +279,13 @@
                             <hr>
                             <button class="buttonStyle btn-tertiary" ng-click="openUserPanel()">Close</button>
 
-                             <button id="debugButton" class="buttonStyle btn-primary" onclick="submitDebug()">Submit Debug Report</button>
+                            <!-- <button id="debugButton" class="buttonStyle btn-primary" onclick="submitDebug()">Submit Debug Report</button> -->
 
-                            <div  style="font-size:12px; display:block" id="debug">Debug</div>
+                            <div  style="font-size:12px; display:none" id="debug">Debug</div>
 
-                            <div  style="font-size:12px; display:block" id="fileURL">fileURL</div>
-                            <div  style="font-size:12px; display:block" id="fileType">fileType</div>
-                            <div  style="font-size:12px; display:block" id="fileName">fileName</div>
+                            <div  style="font-size:12px; display:none" id="fileURL">fileURL</div>
+                            <div  style="font-size:12px; display:none" id="fileType">fileType</div>
+                            <div  style="font-size:12px; display:none" id="fileName">fileName</div>
                             <div  style="font-size:12px; display:none" id="platform">platform</div>
 
                         </div>
