--- a/www/index.html
+++ b/www/index.html
@@ -212,7 +212,7 @@
                                                             <div style="width:100%; text-align:center"><img class="grid twelve" id="preview" /></div>
 
                                                             <div id="androidMediaButtons">
-                                                                <button class="buttonStyle selectButton" id="uploadVideoButton" onclick="androidVideoAlert()" style="width:49%; clear:none; float:left">Record Video</button>
+                                                                <button class="buttonStyle selectButton" id="uploadVideoButtonAndroid" onclick="androidVideoAlert()" style="width:49%; clear:none; float:left">Record Video</button>
 
                                                                 <button class="buttonStyle selectButton" id="uploadPhotoButton" onclick="captureImage()" style="width:49%; float:right; clear:none">Take Photo</button>
 
