--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; display:block; position:fixed; top:10px; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v2.4</div>
+            <div style="font-size:12px; display:block; position:fixed; top:10px; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v2.5</div>
 
             <div class="row nav-top">
                 <div class="grid three pull" ng-click="goBack()" ng-show="showBack">Back</div>    
@@ -287,7 +287,7 @@
 
                 </div>
 
-                <div ng-show="viewUserPanel" class="appPanel">               
+                <div ng-show="viewUserPanel" class="appPanel scroll-screen">               
                    
                     <div class="row">
                         <div class="grid twelve">
@@ -306,7 +306,7 @@
                             <!-- <button id="debugButton" class="buttonStyle btn-primary" onclick="submitDebug()">Submit Debug Report</button> -->
 
                             <div  style="font-size:12px; display:block" id="debug">Debug</div>
-
+                            <hr>
                             <div  style="font-size:12px; display:block" id="fileURL">fileURL</div>
                             <div  style="font-size:12px; display:block" id="fileType">fileType</div>
                             <div  style="font-size:12px; display:block" id="fileName">fileName</div>
