--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; display:block; position:fixed; top:10px; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center">v2.5</div>
+            <div style="font-size:12px; display:block; position:fixed; top:10px; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center" id="trace">...</div>
 
             <div class="row nav-top">
                 <div class="grid three pull" ng-click="goBack()" ng-show="showBack">Back</div>    
@@ -51,7 +51,8 @@
             <!--<div class="app-screen screen-fader-hide" id="fader"></div>-->
             <div id="appContainer">
 
-                            <div class="app-screen screen-login" id="screen-login">
+                            <div class=" screen-login" id="screen-login">
+                                <p>TEST</p>
                                 <div class="row">
 
                                     <div class="grid twelve center">
