--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
+    <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1.0, user-scalable=no">
+
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta http-equiv="Content-Security-Policy"/>
     <meta charset="utf-8" />
@@ -51,8 +52,7 @@
             <!--<div class="app-screen screen-fader-hide" id="fader"></div>-->
             <div id="appContainer">
 
-                            <div class="app-screen screen-login" id="screen-login">
-                                <p>TEST</p>
+                            <div class="testClass screen-login" id="screen-login" style="float:left; padding-top: 55px; background-color: #eeeff1;">
                                 <div class="row">
 
                                     <div class="grid twelve center">
@@ -87,7 +87,7 @@
                             </div>
                             <!-- APP SCREEN END -->
 
-                            <div class="app-screen scroll-screen" id="screen-taskList">
+                            <div class="testClass scroll-screen" id="screen-taskList" style="float:left; padding-top: 55px; background-color: #eeeff1;">
                                 <div class="row">
 
                                     <h2 class="task-title">Task List</h2>
@@ -115,7 +115,7 @@
 
                             <!-- APP SCREEN END -->
 
-                            <div class="app-screen scroll-screen" id="screen-messages">
+                            <div class="testClass scroll-screen" id="screen-messages" style="float:left; padding-top: 55px; background-color: #eeeff1;">
 
                                     <div class="row conversation-stream">
 
@@ -178,7 +178,8 @@
                             </div>
                             <!-- APP SCREEN END  -->
 
-                            <div class="app-screen scroll-screen" id="screen-reply">
+                            <div class="testClass scroll-screen" id="screen-reply" style="float:left; padding-top: 55px; background-color: #eeeff1;">
+                                <p>TEST</p>
                                 <div class="row">
                                     <div class="grid twelve">
 
