--- a/www/index.html
+++ b/www/index.html
@@ -178,7 +178,7 @@
                             </div>
                             <!-- APP SCREEN END  -->
 
-                            <div class="scroll-screen translateZFix" id="screen-reply" style="float:left; padding-top: 55px; background-color: #eeeff1;">
+                            <div class="scroll-screen reRender" id="screen-reply" style="float:left; padding-top: 55px; background-color: #eeeff1;">
 
                                 <div class="row">
                                     <div class="grid twelve">
